jLogger/jLogger.css
.log-window {
    background: rgba(0, 0, 0, 0.85);
    position: absolute;
    left: 0;
    bottom: 0;
    right: 0;
    border: 1px solid #777;
    color: #fff;
    font-family: Verdana;
    font-size: 1em;
    height: 200px;
}

.log-window.hide {
    height: 0px;
}

.log-window,
.log-window.hide,
.log-div-title,
.hide .log-div-title {
    -webkit-transition: 1500ms;
    /* Safari */
    transition: 1500ms;
}

.log-tab {
    background: rgba(0, 0, 0, 0.85);
    position: absolute;
    bottom: 100%;
    left: 5px;
    border: 1px solid #666;
    border-bottom: none;
    padding: 2px 8px;
    border-radius: 5px 5px 0 0;
    text-transform: uppercase;
    cursor: pointer;
}

.log-div-title {
    position: relative;
    margin: 0;
    border-top: 1px solid #888;
    padding: 3px 10px 10px;
    line-height: 1.3em;
    font-size: 0.9em;
    min-height: 19px;
    height: 14%;
    max-height: 25px;
    color: rgb(15, 95, 255);
    overflow: hidden;
    white-space: nowrap;
}

.log-container {
    height: 74.5%;
    overflow-y: hidden;
}

.hide .log-div-title,
.hide .log-container {
    margin: 0;
    padding: 0;
    min-height: 0;
}

.log-entry-list {}

.log-entry {
    padding: 2px 0 2px 5px;
    font-size: 0.8em;
}

.log-time {
    display: inline-block;
    width: 5em;
    margin: 0 3px 0 0;
    white-space: nowrap;
}

.log-time::after {
    content: '';
    margin: 0 3px;
}

.log-debug {
    color: rgb(180, 180, 180);
}

.log-info {
    color: rgb(255, 255, 50);
}

.log-error {
    color: rgb(255, 80, 80);
}

